--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
   "description": "Where developers meet",
   "main": "index.js",
   "scripts": {
-    "dev":"nodemon src/app.js",
+    "dev": "nodemon src/app.js",
     "start": "node src/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Shayas Shayi",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.21.1"
+    "bcrypt": "^5.1.1",
+    "express": "^4.21.1",
+    "mongoose": "^8.7.1",
+    "validator": "^13.12.0"
   }
 }
